# ml4tradingbenchmark

./: .gitignore  README.md  analyze_results.py  environment.yml  pyproject.toml
configs/: splits.yaml  tickers.txt  train.yaml
configs/model/: lstm.yaml  patchtst.yaml  rf.yaml
configs/sweep/: grid.yaml
scripts/: make_grid.py  run_config.py  run_sweep.py
scripts/slurm/: run_array.sh  run_one.sh
src/tsforecast.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/tsforecast/cli/: train.py
src/tsforecast/data/: download_close_prices.py  loaders.py  scalers.py  splits.py  windows.py
src/tsforecast/evaluation/: metrics.py  plots.py
src/tsforecast/models/: __init__.py  base.py  lstm.py  patchtst.py  rf.py
src/tsforecast/tracking/: __init__.py  filesystem.py  run_id.py
src/tsforecast/training/: __init__.py  callbacks.py  engine.py  reproducibility.py
src/tsforecast/utils/: logging.py  paths.py
tests/: test_metrics.py  test_models_smoke.py  test_recursive.py  test_run_id_tags.py  test_scalers.py  test_splits.py  test_windows.py
