[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsforecast"
version = "0.1.0"
description = "Stock price forecasting (RF vs LSTM vs PatchTST)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "torch>=2.0",
    "transformers>=4.40",
    "accelerate>=1.1.0",
    "pyyaml>=6.0",
    "pyarrow>=14.0",
    "yfinance>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "matplotlib>=3.7",
]

[project.scripts]
tsforecast-train = "tsforecast.cli.train:main"

[tool.setuptools.packages.find]
where = ["src"]
